# anonchess

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  anonchess.go  go.mod  httpd.sh  main.go  package-lock.json  package.json  vendor-publish.sh  vendor.sh  webpack.config.js
.github/workflows/: publish.yml
cmd/play/: play-cmd.go
docker/: Dockerfile  build.sh  devel.sh
html/: gen.sh  head.html  index.html  play.html  tail.html
lib/game/: game.go  game_test.go
lib/moves/: moves.go  moves_test.go
src/: lib.rs
static/: .gitignore  chess.css  index.html  loader.js  styles.css  vendor-publish.sh  vendor.sh
static/css/: chess.css  default.css
static/js/: play.js
static/play/: index.html
tpl/: about.html  base.html  home.html  loader.js  play.html  tpl.go
ui/: .gitignore  App.jsx  ChessBoard.jsx  GameControls.jsx  game.js  index.js
ui/about/: About.jsx  index.js
ui/home/: Home.jsx  index.js
ui/play/: BoardPieces.jsx  ChessBoard.jsx  Play.jsx  Player1.jsx  Player2.jsx  SideBar.jsx  SideBlack.jsx  SideWhite.jsx  index.js  sidebar.js
wasm/: build.sh  cover.sh  test.sh  wasm.go  wasm_test.go
wasm/home/: home-wasm.go
wasm/play/: play-wasm.go
