[package]
name = "anonchess"
version = "0.0.1"
edition = "2021"
description = "Play anonymous chess games"
repository = "https://github.com/chesslovaquia/anonchess"
license = "bsd"

[dependencies]
wasm-bindgen = "0.2.93"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.43"
